--- a/mapunsuk/mapunsuk.csproj
+++ b/mapunsuk/mapunsuk.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Identity\Pages\Account\Manage\" />
     <Folder Include="wwwroot\uploads\posts\" />
   </ItemGroup>
 
